# Asistente_Personal

./: .env.example  .gitignore  .gitmodules  .repomixignore  AGENTS.md  README.md  brain.ps1  chat.js  crear_contextos_locales.ps1  crear_md.BAT  ctx_core.md  ctx_dashboard.md  ctx_jobs.md  ctx_wheelsaver.md  docker-compose.yml  ecosystem.config.archived.js  ecosystem.config.js  fix_final.js  fix_job_hunter.js  fix_tech_debt.js  generar_contexto.py  generar_repomix_10.bat  litestream.yml  mcp.json  notify.js  opencode.json  package-lock.json  package.json  repomix_20260703_080144.md  repomix_20260703_083625.md  repomix_20260703_091404.md  repomix_20260703_093150.md  run_brain.bat  saneamiento.js  setup.ps1  tmp_check.js  tsconfig.json  upgrade_eventbus.js  verify_playwright.js  vitest.config.js
.agents/: AGENTS.md
_archived/: README.md
config/: alarms.json  schedule.json
dashboard/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
data/: MIGRATION_PLAN_data.md  aplicaciones.json  contexto_vital.json  drive_inspeccion_links.json  finanzas.md  hardware.md  masterledger.json  metas.md  (+18 more)
wheel-saver/: README.md  cli.py  pyproject.toml  requirements.txt  test_ui.py
wheel-saver/api/: __init__.py  auth.py  database.py  llm.py  main.py  repository.py
wheel-saver/data/: top_repos.db
wheel-saver/frontend/: app.js  index.html
wheel-saver/scraper/: db_manager.py  github_fetcher.py
wheel-saver/scripts/: import_from_evanli.py  scrape_gitstar_ranking.py
wheel-saver/tests/: conftest.py  test_api_async.py  test_db_manager.py  test_search.py
(+675 files in other folders)
